src/test/ui/derives/derives-span-Hash-struct.stderr
error[E0277]: the trait bound `Error: std::hash::Hash` is not satisfied
  --> $DIR/derives-span-Hash-struct.rs:8:5
   |
LL |     x: Error
   |     ^^^^^^^^ the trait `std::hash::Hash` is not implemented for `Error`
   |
   = note: required by `std::hash::Hash::hash`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
